k8s/app-node/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-node-random-service
spec:
  selector:
    app: app-node-random
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
