k8s/app-node/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-node-random-ingress
  annotations:
    # Use nginx as ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app-node-random.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-node-random-service
                port:
                  number: 3000
